# core-event-ingestor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  rustfmt.toml
cloud-pubsub/src/: message.rs  topic.rs
cloud_build/: deploy.yaml  integrate.yaml
src/: configs.rs  main.rs  pubsub.rs
src/services/: todoist.rs
